@@ -14,6 +14,7 @@ v0.3.5 - Unpublished development build
  > Fix for setting skin thumbnail property when using Just Select method
  > Fix for menus failing to build when the action for a shortcut contains a unicode character
  > Dirty fix for situations where a playlist in a menu will cause that menu to appear empty
+ > Return skin playlists via special:// protocol (current skin only)
 
 v0.3.4
 - XML files are formatted (includes.xml, auto-generated playlists), includes now have an id property
